# BoolosBrewery

./: .gitignore  Cargo.toml  README.md  test_strategy.py
.github/workflows/: publish_submission.yml  submissions.yml
docs/: syntax.md  test_strategy.md  variants.md
src/: game.rs  language.rs  main.rs
src/util/: indexed_string.rs  mod.rs  parsing.rs
strats/: __init__.py  _backend.py  strategy.py
strats/game/: consts.py  manager.py  types.py
strats/scoring/: __init__.py  complexity.py  consts.py  runner.py  scoreboard.py
submissions/: asserting_absurdly_minimal_complexity.py  bryker_strategy.py  default_optim.py  ganitsu_joke_simplified.py  ganitsu_optim.py  ganitsu_simple_sat.py  ganitsu_simplest_sat.py  hard_strat_bryker_optimised.py  itr.py  itr_minimal.py  jix_sat_pruned.py
submissions/public/: scores.json
submissions/public/default/: 2024-09-17.22-59-29.vzsky.py  20240917_225929_vzsky.py  20240920_141117_default_optim.py  20240921_130058_20240920_141117_default_optim.py  20241002_035437_itr.py  20241020_143248_itr_default_new_rules.py  README.md
submissions/public/easy/: 2024-09-17.22-45-18.submit_easy.py  2024-09-18.00-11-59.itr.py  20240917_224518_submit_easy.py  20240918_001159_itr.py  20240920_095918_easy_optim.py  20240920_210927_asserting_absurdly_minimal_complexity.py  README.md
submissions/public/hard/: 2024-09-18.22-30-32.submit_hard.py  20240917_230605_tmorgan7192_strategy.py  20240918_142447_bryker_strategy.py  20240918_223240_hard_strat_bryker_optimised.py  20240919_040726_jix_sat_synthesized.py  (+11 more)
submissions/sample/: tutorial.py
