[package]
name = "Foobar"
version = "1.0.0"
edition = "2021"

[dependencies]
rand = { version = "0.8.5" }
colored = { version = "2.1.0" }
itertools = { version = "0.13.0", optional = true }
rustyline = { version = "14.0.0", default-features = false }

[features]
# de-randomise field assignments and word assignments (for testing)
derand = []
# easy variant
easy = []
# hard variant
hard = []
# allows for endless questions; enter "done" when you're finished
endless = []
# run through all possible scenarios, and strip I/O
test-strategy = ["dep:itertools"]
# nobody will know this super secret cheat...
cheat = []
